@@ -1340,24 +1340,6 @@ name|hdfs
 operator|.
 name|server
 operator|.
-name|datanode
-operator|.
-name|DataNodeLayoutVersion
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
 name|namenode
 operator|.
 name|NameNode
@@ -6766,83 +6748,6 @@ argument_list|(
 name|nodeReg
 argument_list|)
 throw|;
-block|}
-comment|// verify layout version if there is no rolling upgrade.
-if|if
-condition|(
-operator|!
-name|namesystem
-operator|.
-name|isRollingUpgrade
-argument_list|()
-condition|)
-block|{
-specifier|final
-name|int
-name|lv
-init|=
-name|nodeReg
-operator|.
-name|getVersion
-argument_list|()
-decl_stmt|;
-specifier|final
-name|int
-name|expectedLV
-init|=
-name|nodeReg
-operator|instanceof
-name|NamenodeRegistration
-condition|?
-name|NameNodeLayoutVersion
-operator|.
-name|CURRENT_LAYOUT_VERSION
-else|:
-name|DataNodeLayoutVersion
-operator|.
-name|CURRENT_LAYOUT_VERSION
-decl_stmt|;
-if|if
-condition|(
-name|expectedLV
-operator|!=
-name|nodeReg
-operator|.
-name|getVersion
-argument_list|()
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Layout versions mismatched: the "
-operator|+
-name|nodeReg
-operator|.
-name|getClass
-argument_list|()
-operator|.
-name|getSimpleName
-argument_list|()
-operator|+
-literal|" LV is "
-operator|+
-name|lv
-operator|+
-literal|" but the expected LV is "
-operator|+
-name|expectedLV
-argument_list|)
-expr_stmt|;
-throw|throw
-operator|new
-name|UnregisteredNodeException
-argument_list|(
-name|nodeReg
-argument_list|)
-throw|;
-block|}
 block|}
 block|}
 annotation|@
